apps/generic/overlays/codex/patches/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: codex
spec:
  template:
    spec:
      containers:
        - name: container
          image: docker.io/ajslater/codex:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: yasr-volume
              mountPath: /config
              subPath: configs/codex/
            - name: main-volume
              mountPath: /comics
              subPath: public/Books/
          livenessProbe:
            httpGet:
              scheme: HTTP
              path: /
              port: http
            initialDelaySeconds: 300
            timeoutSeconds: 10
            periodSeconds: 10
            failureThreshold: 3
          ports:
            - name: http
              containerPort: 9810
              protocol: TCP
