apps/generic/overlays/codex/patches/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: codex
spec:
  ports:
    - name: http
      port: 9810
      protocol: TCP
      targetPort: http
